--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -1,12 +1,29 @@
 ---
 layout: default
 ---
-
-<article>
-  <header>
-    <h1>{{ page.title }}</h1>
-  </header>
-  <section>
-    {{ content }}
-  </section>
+<article class="article">
+    <header class="post-header">
+      <div class="post-meta text-center">
+        <h1>{{ page.title }}</h1>
+      </div>
+    </header>
+    <section class="content">
+    	<div class="goals-list">
+    		<ul>
+		     	{% for goal in site.goals %}
+		     		<li>
+			     		{% if goal.display == 'active' %}
+			     		<h1 class="goals-list--title"><a href="{{goal.url}}">{{goal.title}}</a></h1>
+                    <p>{{goal.summary}}</p>
+			     		{% else  %}
+						<h1 class="goal-list--title">{{goal.title}}</h1>
+                    <p>More details coming soon.</p>
+			     		{% endif %}
+						
+					</li>
+				{% endfor %}
+    		</ul>
+    	</div>
+     	
+    </section>
 </article>
