--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,6 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-
 /**
  * Basic styling
  */
@@ -16,25 +15,10 @@ body {
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
-    font-weight: 300;
-    color: $text-color;
-    background-color: $background-color;
+    font-weight: $base-font-weight;
+    color: $black;
     -webkit-text-size-adjust: 100%;
 }
-
-
-
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
-}
-
-
 
 /**
  * Images
@@ -49,13 +33,9 @@ img {
 /**
  * Figures
  */
-figure > img {
-    display: block;
-}
+figure > img {display: block;}
 
-figcaption {
-    font-size: $small-font-size;
-}
+figcaption {font-size: $small-font-size;}
 
 
 
@@ -69,36 +49,6 @@ li {
          margin-bottom: 0;
     }
 }
-
-
-
-/**
- * Headings
- */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
-}
-
-
-
-/**
- * Links
- */
-a {
-    color: $brand-color;
-    text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
-}
-
-
 
 /**
  * Blockquotes
@@ -172,7 +122,6 @@ pre {
  * Clearfix
  */
 %clearfix {
-
     &:after {
         content: "";
         display: table;
