--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,1 +1,65 @@
-.name {text-align: center;}
+@include font-face('SuperiorTitle-Reg', '/fonts/SuperiorTitle-Regular', 400 , 'normal');
+
+
+.site-title, 
+h1, h2, h3, 
+h4, h5, h6 {
+	font-family: $reg;
+	line-height: 1.5;
+}
+
+h1 {font-size: em(28px);}
+p {
+	margin-bottom: 15px;
+	a:after {
+		content: "";
+		display: block;
+		position: absolute;
+		left: 0;
+		bottom: -3px;
+		height: 1px;
+		width: 100%;
+		background: $black;
+		z-index: 0;
+	}
+}
+
+a {
+	position: relative;
+	color: $black;
+	text-decoration: none;
+	&:hover {text-decoration: none;}
+	&:after {
+		content: "";
+		display: block;
+		position: absolute;
+		left: 0;
+		bottom: -3px;
+		height: 1px;
+		width: 0;
+		background: $black;
+		z-index: 0;
+		@include transition(all 300ms ease);
+	}	
+	&:hover:after {width: 100%;}}
+
+dl {margin-top: 25px;}
+
+dt {
+	font-family: $reg;
+	font-size: em(20px);
+	margin-bottom: 5px;
+}
+
+dd {margin-bottom: 50px;}
+
+
+.page-list h2 {
+	font-size: em(24px);
+	margin-bottom: 15px;
+}
+
+.goals-list--title {
+	font-size: em(24px);
+	margin-bottom: 5px;
+}
