first live push

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,10 +35,10 @@ article header {padding-bottom: 0;}
 }
 
 
+.writing-list,
 .goals-list {
   max-width: 450px;
   margin: 50px auto;
-
   li {margin-bottom: 25px;}
 }
 
