--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -28,7 +28,6 @@ a {
 	position: relative;
 	color: $black;
 	text-decoration: none;
-	&:hover {text-decoration: none;}
 	&:after {
 		content: "";
 		display: block;
@@ -36,12 +35,28 @@ a {
 		left: 0;
 		bottom: -3px;
 		height: 1px;
-		width: 0;
+		width: 100%;
 		background: $black;
 		z-index: 0;
-		@include transition(all 300ms ease);
 	}	
-	&:hover:after {width: 100%;}}
+	&:hover {text-decoration: none;}
+	@media (min-width: 800px){
+		&:after {
+			content: "";
+			display: block;
+			position: absolute;
+			left: 0;
+			bottom: -3px;
+			height: 1px;
+			width: 0;
+			background: $black;
+			z-index: 0;
+			@include transition(all 300ms ease);
+		}	
+		&:hover:after {width: 100%;}
+	}
+}
+	
 
 dl {margin-top: 25px;}
 
