--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,13 @@
     <nav class="nav-right">
       <ul>
         {% for page in site.pages %}
-          {% if page.title %}
-          <li>
-            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          </li>
-          {% endif %}
+          {% unless page.url == '/404.html' %}
+            {% if page.title %}
+              <li>
+                <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+              </li>
+            {% endif %}
+          {% endunless %}
         {% endfor %}
       </ul>
     </nav>
