--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,31 +1,44 @@
 .site-header {
   width: 100%;
   text-align: center;
-  @media (min-width: 400px){text-align: left;}
+  @media (min-width: 800px){text-align: left;}
 }
 
 nav {
   li {display: inline-block; margin: 0 10px;}
-  a {font-size: em(14px);}
+  a {
+    font-size: em(14px); 
+    text-decoration: none; 
+    &:after {display: none;}
+    @media (min-width: 800px){
+      &:after {display: block;}
+    }
+  }
 }
 
 .nav-left {
   li:first-child {margin-left: 0;}
   li:last-child {margin-right: 0;}
-  @media (min-width: 400px){
+  @media (min-width: 800px){
     float: left;  
   }  
 }
 .nav-right {
   li:last-child {@include omega;}
-  @media (min-width: 400px){
+  @media (min-width: 800px){
     float: right;  
   }  
 }
 
 .site-title {
-  @media (min-width: 400px){
+  &:after {
+    display: none;
+  }
+  @media (min-width: 800px){
     float: left;  
+    &:after {
+      display: block;
+    }
   }
 }
 
