--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -3,14 +3,13 @@
 	border: 5px solid;
 	display: table;
 	margin: 35px auto;
-	font-family: $reg;
+	// font-family: $reg;
 }
 
 .btn-project {
 	@include transition(all 300ms ease);
-	border-color: $black;
+	border-color: $color-black;
 	&:hover {
-		background: $black;
-		color: $gray;
+		background: $color-black;
 	}
 }
