rewrite sass and html

--- a/_includes/social-list.html
+++ b/_includes/social-list.html
@@ -2,21 +2,21 @@
 {% if site.twitter %}
   <a class="social-list__item" href="http://www.twitter.com/{{site.twitter}}" target="_blank">
   	<svg class="social-list__icon social-list__icon--twitter" viewBox="0 0 25 22">
-  	  <use xlink:href="images/icons.svg#twitter"></use>
+  	  <use xlink:href="/images/icons.svg#twitter"></use>
   	</svg>
   </a>
 {% endif %}
 {% if site.github %}
   <a class="social-list__item" href="http://www.github.com/{{site.github}}" target="_blank">
   	<svg class="social-list__icon social-list__icon--github" viewBox="0 0 33 33">
-  	  <use xlink:href="images/icons.svg#github"></use>
+  	  <use xlink:href="/images/icons.svg#github"></use>
   	</svg>
   </a>
 {% endif %}
 {% if site.email %}
   <a class="social-list__item" href="mailto:{{site.email}}">
   	<svg class="social-list__icon social-list__icon--email" viewBox="0 0 10 6">
-  	  <use xlink:href="images/icons.svg#email"></use>
+  	  <use xlink:href="/images/icons.svg#email"></use>
   	</svg>
   </a>
 {% endif %}
