--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -2,26 +2,25 @@
 layout: default
 ---
 <article class="article">
-    <header class="article-header">
-      <div class="article-meta">
-        <h1>{{ page.title }}</h1>
-      </div>
-    </header>
-    <section class="block">
-    	<div class="list-centered">
-    		<ul>
-		     	{% for goal in site.goals %}
-		     		<li>
-			     		{% if goal.display == 'active' %}
-			     		<h1 class="list-centered--title"><a href="{{goal.url}}">{{goal.title}}</a></h1>
-                    <p>{{goal.summary}}</p>
-			     		{% else  %}
-					<h1 class="list-centered--title">{{goal.title}}</h1>
-                    <p>More details coming soon.</p>
-			     		{% endif %}
-					</li>
-				{% endfor %}
-    		</ul>
-    	</div>
-    </section>
+
+  <h1 class="article__title">{{ page.title }}</h1>
+
+  <div class="content">
+      <ul class="article__articles-list list-unstyled">
+        {% for post in site.goals reversed %}
+
+          <li class="article__articles-list-item">
+
+          {% if post.display == 'active' %}
+              <h2 class="article__articles-title"><a href="{{post.url}}">{{post.title}}</a></h2>
+              <p>{{post.summary}}</p>
+          {% else %}
+              <h2 class="article__articles-title">{{post.title}}</h2>
+              <p>More details coming soon.</p>
+          {% endif %}
+
+          </li>
+        {% endfor %}
+      </ul>
+  </div>
 </article>
