--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,17 +4,16 @@ layout: default
 <article class="article">
     <header class="article-header">
       {% if page.img %}
-      <figure class="hero">
-        <img src="{{ page.img }}" alt="{{page.title}}">
-      </figure>
+        <figure class="hero-img">
+          <img src="{{ page.img }}" alt="{{page.title}}">
+        </figure>
       {% endif %}
+
+      <h1 class="article__title">{{ page.title }}</h1>
       
-      <div class="article-meta">
-        <h1>{{ page.title }}</h1>
-        {% if page.date %}
-          <small>{{ page.date | date: "%b %-d, %Y" }}</small>
-        {% endif %}
-      </div>
+      {% if page.date %}
+        <small class="article__date">{{ page.date | date: "%b %-d, %Y" }}</small>
+      {% endif %}
     </header>
 
     <section class="content">
