--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -2,22 +2,18 @@
 layout: default
 ---
 <article class="article">
-    <header class="article-header">
-      <div class="article-meta">
-        <h1>{{ page.title }}</h1>
-      </div>
-    </header>
-    <section class="block">
-    	<div class="list-centered">
-    		<ul>
-		     	{% for post in site.posts %}
-		     		<li>
-			     		<h1 class="list-centered--title"><a href="{{post.url}}">{{post.title}}</a></h1>
-              <p>{{post.summary}}</p>
-					</li>
-				{% endfor %}
-    		</ul>
-    	</div>
-     	
-    </section>
+
+  <h1 class="article__title">{{ page.title }}</h1>
+  <div class="content">
+    <ul class="article__articles-list list-unstyled">
+      {% for post in site.posts %}
+        <li class="article__articles-list-item">
+          <h2 class="article__articles-title"><a href="{{post.url}}">{{post.title}}</a></h2>
+          <p>{{post.summary}}</p>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
 </article>
+
+
