--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -5,7 +5,7 @@ body {
 
 body {
 	font-family: $body-font;
-	font-weight: 400;
+	font-weight: 300;
 	color: $color-black;
 	line-height: $base-line-height;
 }
@@ -14,4 +14,13 @@ img {max-width: 100%;}
 
 svg {
 	fill: currentColor;
+}
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
+	font-weight: 500;
 }
