--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -3,7 +3,6 @@
 .site-title, 
 h1, h2, h3, 
 h4, h5, h6 {
-	// font-family: $reg;
 	line-height: 1.5;
 }
 
@@ -11,17 +10,6 @@ h1 {font-size: em(28px);}
 
 p {
 	margin-bottom: 15px;
-	a:after {
-		content: "";
-		display: block;
-		position: absolute;
-		left: 0;
-		bottom: -3px;
-		height: 1px;
-		width: 100%;
-		background: $color-black;
-		z-index: 0;
-	}
 }
 
 a {
@@ -37,47 +25,16 @@ a {
 	}
 }
 
-// a {
-// 	position: relative;
-// 	color: $black;
-// 	text-decoration: none;
-// 	&:after {
-// 		content: "";
-// 		display: block;
-// 		position: absolute;
-// 		left: 0;
-// 		bottom: -3px;
-// 		height: 1px;
-// 		width: 100%;
-// 		background: $black;
-// 		z-index: 0;
-// 	}	
-// 	&:hover {text-decoration: none;}
-// 	@media (min-width: 50em){
-// 		&:after {
-// 			content: "";
-// 			display: block;
-// 			position: absolute;
-// 			left: 0;
-// 			bottom: -3px;
-// 			height: 1px;
-// 			width: 0;
-// 			background: $black;
-// 			z-index: 0;
-// 			@include transition(all 300ms ease);
-// 		}	
-// 		&:hover:after {width: 100%;}
-// 	}
-// }
 	
 strong {
 	font-weight: 600;
 }
 
-dl {margin-top: 25px;}
+dl {
+	margin-top: 25px;
+}
 
 dt {
-	// font-family: $reg;
 	font-size: em(20px);
 	margin-bottom: 5px;
 }
