--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -9,28 +9,26 @@
 .section {
 	@include clearfix;
 	margin-bottom: 20px;
+}
 
-	&--with-padding {
+.content {
+	padding-left: 30px;
+	padding-right: 30px;
 
-		padding-left: 30px;
-		padding-right: 30px;
-
-		@media (min-width: 40em) {
-			padding-left: 100px;
-			padding-right: 100px;
-		}
+	@media (min-width: 40em) {
+		padding-left: 100px;
+		padding-right: 100px;
 	}
 }
 
 .two-col {
 	@media (min-width: 40em) {
-		-webkit-column-count:2; /* Chrome, Safari, Opera */
-		-moz-column-count:2; /* Firefox */
-		column-count:2;
-		-webkit-column-gap: 40px; /* Chrome, Safari, Opera */
-		-moz-column-gap: 40px; /* Firefox */
+		-webkit-column-count: 2;
+		-moz-column-count: 2;
+		column-count: 2;
+		-webkit-column-gap: 40px;
+		-moz-column-gap: 40px; 
 		column-gap: 40px;
 		column-span: none;
 	}
-
 }
