--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -1,14 +1,21 @@
 .btn {
-	padding: 10px 25px;
-	border: 5px solid;
 	display: table;
+	padding: 10px 20px;
 	margin: 35px auto;
-	// font-family: $reg;
+    text-indent: 0;
+    color: $color-white;
+	background: $color-black;
+	text-decoration: none;
+	@include transition(all 300ms ease);
+
+	&:hover {
+		background: lighten($color-black, 25%);
+	}
+
 }
 
 .btn-project {
 	@include transition(all 300ms ease);
-	border-color: $color-black;
 	&:hover {
 		background: $color-black;
 	}
