--- a/_sass/modules/_images.scss
+++ b/_sass/modules/_images.scss
@@ -1,4 +1,10 @@
 .hero-img {
+	img {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	&__caption {
 		font-size: rem(12);
 		float: right;
