update which scripts are being used

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
-<script src="/js/vendor/svg4everybody.min.js"></script>
+<script defer async src="/js/vendor/svg4everybody.min.js"></script>
 <script type="text/javascript">
 
 	svg4everybody();
