update with year-in-review-2015 post

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -30,6 +30,12 @@ strong {
 	font-weight: 600;
 }
 
+hr {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	border: 1px solid $color-gray;
+}
+
 .footnote,
 .footnotes {
 	font-size: rem(12);
