update feed and stuff

--- a/_sass/base/_colors.scss
+++ b/_sass/base/_colors.scss
@@ -1,6 +1,8 @@
 $color-black: #222;
 $color-white: #fff;
 $color-gray: #C0C0C0;
+$scenario-gray:  #eaebed;
+$color-blue: #0074D9;
 
 $color-twitter: #55acee;
 $color-github: #333333;
