--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -1,12 +1,18 @@
 .btn {
+	@include transition(all 300ms ease);
 	display: table;
-	padding: 10px 20px;
-	margin: 35px auto;
-    text-indent: 0;
-    color: $color-white;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	margin-left: auto;
+	margin-right: auto;
+	text-indent: 0;
+	color: $color-white;
 	background: $color-black;
 	text-decoration: none;
-	@include transition(all 300ms ease);
 
 	&:hover {
 		background: lighten($color-black, 25%);
