--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
- 
+
   {% include social-list.html %}
-  
+
   <div class="site-links">
     {% for page in site.pages %}
-      {% unless page.url == '/404.html' %}
+      {% unless page.exclude %}
         {% if page.title %}
           <a class="site-links__item" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         {% endif %}
