--- a/_layouts/fire-meetup.html
+++ b/_layouts/fire-meetup.html
@@ -6,6 +6,7 @@ layout: default
   <h1 class="article__title">{{ page.title }}</h1>
 
   <div class="content">
+      <a href="https://fire-community.herokuapp.com/" target="_blank">FI/RE Slack Group</a>
       <ul class="article__articles-list list-unstyled">
         {% for post in site.fire-meetup reversed %}
 
