--- a/_sass/modules/_articles.scss
+++ b/_sass/modules/_articles.scss
@@ -43,3 +43,16 @@
 	margin: 1.5em 0;
 	text-align: center;
 }
+
+
+pre.highlight {
+	background-color: #ecf0f1;
+	padding: 20px 25px;
+}
+
+code {
+	padding-top: 25px;
+	padding-bottom: 25px;
+	max-width: 100%;
+
+}
